Grace/tests/gibbs/errors/t284.grace
// ERROR = P1018
catch(.)
